[tool.poetry]
name = "japandas"
version = "0.1.0"
description = ""
authors = ["yoshiki <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.5"
pandas = "^1.0.5"
requests = "^2.24.0"
xlrd = "^1.2.0"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
